--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,6 +1,6 @@
 
 <%= simple_form_for ([@cocktail, @dose]) do |t| %>
 <%= t.input :description %>
-<%= t.association :ingredient_id, collection: Ingredient.all %>
+<%= t.association :ingredient, collection: Ingredient.all %>
 <%= t.button :submit %>
 <% end %>
