Add dotenv - Protect my secret data in .env file

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="display-1 d-inline">Cockadoodle-tail!</h1>
+<h1 class="display-1 d-inline">Cocka-taildy-doo!</h1>
 <a href="/cocktails/new" class="btn btn-primary d-inline  float-right my-3">New Cocktail</a>
 
 
@@ -9,8 +9,6 @@
         <img src="https://picsum.photos/200/300" class="card-img-top rounded" alt="...">
         <div class="card-body">
           <h5 class="card-title"><%= cocktail.name %></h5>
-          <p class="card-text">Some placeholder for the ingredients</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     <% end %>
