--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the cocktails controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+span.del {
+    color: red;
+    font-weight: bold;
+    font-size: 62px;
+    border-radius: 50px;
+    padding-left: 24px;
+    padding-right: 23px;
+}
