--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,6 +1,2 @@
-<%= simple_form_for @cocktail do |f|  %>
-  <%= f.input :name %>
-  <%= f.button :submit %>
-<% end %>
-
+<%= render 'photo_form' %>
 
