--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
-<h1 class="display-1 d-inline">Cocka-taildy-doo!</h1>
-<a href="/cocktails/new" class="btn btn-primary d-inline  float-right my-3">New Cocktail</a>
+<h1 class="display-1">Cocka-taildy-doo!</h1>
+<a href="/cocktails/new" class="btn btn-primary my-3">New Cocktail</a>
 
 
 <div class="d-flex flex-wrap justify-content-between">
