--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,33 @@
 // Specific CSS for your home-page
 
+body {
+  font: 13px/22px Helvetica;
+}
+
+.title {
+  color: inherit;
+  text-decoration: none;
+  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(198,232,248,0) 75%,rgba(192,230,247,1) 83%,rgba(192,230,247,1) 94%,rgba(184,226,245,1) 95%,rgba(184,226,245,1) 97%,rgba(184,226,245,0) 100%); /* W3C */
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#00b8e2f5',GradientType=0 ); /* IE6-9 */
+  display: inline;
+  transition: background 0.5s;
+  &:hover {
+  text-decoration: none;
+  color: black;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(198, 232, 248, 0) 25%, #c0e6f7 83%, #c0e6f7 94%, #b8e2f5 95%, #b8e2f5 97%, rgba(184, 226, 245, 0) 100%);
+  }
+}
+
 a {
   text-decoration: none;
   color: black;
+  &:hover {
+    text-decoration: none;
+    color: black;
+  }
+}
+
+.shadow {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    border-radius: 4px;
 }
