--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,7 +1,7 @@
 <div class="card my-3" style="width: 18rem;">
 <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fit %>
 
-  <div class="card-body">
+  <div class="card-body shadow">
     <h5 class="card-title"><%= @cocktail.name %></h5>
     <% @cocktail.doses.each do |dose| %>
     <div class="d-flex justify-content-between">
@@ -9,7 +9,7 @@
         <%= "#{dose.ingredient.name} #{dose.description}" %>
       </div>
       <%= link_to doses_path(dose), method: :delete, data: {confirm: "Are you sure?"}, class: "d-flex" do %>
-      <span class="align-self-center del">-</span>
+      <span class="align-self-center">-</span>
       <% end %>
     </div>
     <% end %>
